Fix page breaks in print doc

--- a/_sass/print.scss
+++ b/_sass/print.scss
@@ -189,6 +189,7 @@ header.banner,
 .method .method--section--category {
   min-width: 0;
   padding-right: .5in;
+  page-break-after: always;
 }
 
 
